logs2/sweep_1074654_2.err
  File "/scratch/pzz1/3d-1d/sweep_array.py", line 15
    module purge
           ^^^^^
SyntaxError: invalid syntax
  File "/scratch/pzz1/3d-1d/sweep_array.py", line 15
    module purge
           ^^^^^
SyntaxError: invalid syntax
srun: error: bb2u14c1: tasks 0-1: Exited with exit code 1
